[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Yest Izit <hi@dmitry.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = { extras = ["d"], version = "^22.10.0" }
pylint = "^2.15.6"
pre-commit = "^2.20.0"

[tool.mypy]
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pylint]
max-line-length = 120
# C0116: Missing function or method docstring
# C0114: Missing module docstring
# C0115: Missing class docstring
# R0903: Too few public methods
disable = "C0116, C0114, C0115, R0903"

[tool.black]
line-length = 120
