[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Yest Izit <hi@dmitry.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^22.10.0" }
flake8 = "^6.0.0"
flake8-comprehensions = "^3.10.1"
flake8-logging-format = "^0.9.0"
flake8-new-union-types = "^0.4.1"
flake8-pep585 = "^0.1.6"
flake8-pyproject = "^1.2.1"
flake8-return = "^1.2.0"
flake8-variables-names = "^0.0.5"
mypy = "^0.991"
pre-commit = "^2.20.0"

[tool.mypy]
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | __pycache__
  )/
)
'''
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unreachable = true
warn_unused_ignores = true

[tool.black]
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | __pycache__
  )/
)
'''
line-length = 88
include = "\\.pyi?$"

[tool.flake8]
max-line-length = 88
exclude = ".git,__pycache__,.mypy_cache"
